kubernetes/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: main
  annotations:
    cert-manager.io/issuer: letsencrypt-dns01

spec:
  gatewayClassName: cilium

  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/name: "cilium-gateway-nbg1"
      load-balancer.hetzner.cloud/location: "nbg1"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "true"

  listeners:
    - name: https
      hostname: "*.xmoto.org"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: xmoto-org-tls
            kind: Secret
            group: ""

    - name: http
      hostname: "*.xmoto.org"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
